[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/WeaponPickup.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Weapons/Weapons.png" type="Texture" id=2]
[ext_resource path="res://Graphics/UI/Interact_PC.png" type="Texture" id=3]
[ext_resource path="res://Graphics/UI/Interact_PlayStation.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Weapons/IcingProjectile.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39.421, 33.2396 )

[node name="WeaponPickup" type="Area2D"]
script = ExtResource( 1 )
textures = {
"rifle": ExtResource( 5 ),
"unarmed": ExtResource( 5 )
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.36224, 10.5574 )
texture = ExtResource( 2 )
vframes = 2
hframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PopUpUI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PC" type="Sprite" parent="PopUpUI"]
visible = false
position = Vector2( -1.02168, -38.1429 )
scale = Vector2( 0.2, 0.2 )
z_index = 1
texture = ExtResource( 3 )

[node name="PlayStation" type="Sprite" parent="PopUpUI"]
visible = false
position = Vector2( -1.02168, -38.1429 )
scale = Vector2( 0.2, 0.2 )
z_index = 1
texture = ExtResource( 4 )

[node name="ReplaceTimer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_WeaponPickup_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_WeaponPickup_body_exited"]
[connection signal="timeout" from="ReplaceTimer" to="." method="_on_ReplaceTimer_timeout"]
